# TestWhats

./: README.md  pyproject.toml
application/application/: settings.py  urls.py
application/whats/: apps.py  views.py
